Comentários e traduções / Licença

--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
+<!--* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ *    @author João Francisco - https://github.com/joaofxp                  *
+ *    @updated 23/07/2018                                                  *
+ *    Pacote: Desafio Front-End                                            *
+ *                                                                         *
+ *    Copyright (C) 2018 UNIVALI - Universidade do Vale do Itajaí          *
+ *                  https://univali.br                                     *
+ *                  0800 723 1300                                          *
+ *                                                                         *
+ *    Este  programa  é  software livre, você pode redistribuí-lo e/ou     *
+ *    modificá-lo sob os termos da Licença Pública Geral GNU, conforme     *
+ *    publicada pela Free  Software  Foundation,  tanto  a versão 2 da     *
+ *    Licença   como  (a  seu  critério)  qualquer  versão  mais  nova.    *
+ *                                                                         *
+ *    Este programa  é distribuído na expectativa de ser útil, mas SEM     *
+ *    QUALQUER GARANTIA. Sem mesmo a garantia implícita de COMERCIALI-     *
+ *    ZAÇÃO  ou  de ADEQUAÇÃO A QUALQUER PROPÓSITO EM PARTICULAR. Con-     *
+ *    sulte  a  Licença  Pública  Geral  GNU para obter mais detalhes.     *
+ *                                                                         *
+ *    Você  deve  ter  recebido uma cópia da Licença Pública Geral GNU     *
+ *    junto  com  este  programa. Se não, escreva para a Free Software     *
+ *    Foundation,  Inc.,  59  Temple  Place,  Suite  330,  Boston,  MA     *
+ *    02111-1307, USA.                                                     *
+ *                                                                         *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+
 <!DOCTYPE HTML>
 <html>
 
@@ -12,10 +38,10 @@
     <script src="js/validacaoCampoMonetario.js"></script>
 
     <!-- Última compilação e minificada do CSS do bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Última compilação e minificada do javascript do bootstrap -->
-    <script src="js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- styles -->
     <link rel="stylesheet" href="css/index.css">
@@ -34,7 +60,7 @@
                 </div>
             </div>
             <div class="col-md-10">
-                <h3>Bem vindo ao Desafio Front-End!</h3>
+                <h3>Bem-vindo ao Desafio Front-End!</h3>
                 <br>
                 <h5>Selecione um item no menu</h5>
             </div>
