--- a/cadastro.html
+++ b/cadastro.html
@@ -24,18 +24,37 @@
  *                                                                         *
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 
-<!DOCTYPE HTML>
-<html>
-
-<head>
+ <!DOCTYPE HTML>
+ <html>
+    
+    <head>
     <title>Desafio Front</title>
     <meta charset="UTF-8">
     <meta name="description" content="Desafio Front-End, construir uma aplicação web para realizar o cadastro de itens. ">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <!-- checar o browser e adicionar o arquivo certo -->
+    <script>
+        var head = document.getElementsByTagName('head')[0];
+        var cadastroConfig = document.createElement("script");
+        var validacaoCampoMonetario = document.createElement("script");
+
+        if (navigator.userAgent.match('MSIE')) {
+            cadastroConfig.src ="js/IE/cadastroConfig.js";
+            validacaoCampoMonetario.src = "js/IE/validacaoCampoMonetario.js";
+            
+        } else {
+            cadastroConfig.src ="js/cadastroConfig.js";
+            validacaoCampoMonetario.src = "js/validacaoCampoMonetario.js";
+        }
+
+        head.appendChild(cadastroConfig);
+        head.appendChild(validacaoCampoMonetario);
+    </script>
+
     <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/validacaoCampoMonetario.js"></script>
+    <!-- <script src="js/validacaoCampoMonetario.js"></script> -->
 
     <!-- Última compilação e minificada do CSS do bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -46,7 +65,6 @@
     <!-- styles -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
-    <script src="js/cadastroConfig.js"></script>
 </head>
 
 <body>
@@ -67,7 +85,7 @@
 
                     <div class="form-group">
                         <label class="">Nome</label>
-                        <input class="form-control"  name="nomeDoItem" type="text" pattern="[A-Za-z\s.áéíóúÁÉÍÓÚ]{1,50}" placeholder="Lápis" required>
+                        <input class="form-control"  name="nomeDoItem" type="text" pattern="[A-Za-z\s.áéíóúÁÉÍÓÚ]{1,50}" placeholder="Caneta" required>
                     </div>
 
                     <div class="form-group">
@@ -119,7 +137,5 @@
         </div>
     </div>
 </body>
-
-</html>
 
 </html>
