IE compatibilidade, novo input data

--- a/editar.html
+++ b/editar.html
@@ -33,37 +33,16 @@
     <meta name="description" content="Desafio Front-End, construir uma aplicação web para realizar o cadastro de itens. ">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <!-- checar o browser e adicionar o arquivo certo -->
-    <script>
-        var head = document.getElementsByTagName('head')[0];
-        var editarConfig = document.createElement("script");
-        var validacaoCampoMonetario = document.createElement("script");
-
-        if (navigator.userAgent.match('MSIE')) {
-            editarConfig.src ="js/IE/editarConfig.js";
-            validacaoCampoMonetario.src = "js/IE/validacaoCampoMonetario.js";
-            
-        } else {
-            editarConfig.src ="js/editarConfig.js";
-            validacaoCampoMonetario.src = "js/validacaoCampoMonetario.js";
-        }
-
-        head.appendChild(editarConfig);
-        head.appendChild(validacaoCampoMonetario);
-    </script>
-
-    <!-- jQuery -->
-    <script src="js/jquery.min.js"></script>
-
     <!-- Última compilação e minificada do CSS do bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    <!-- Última compilação e minificada do javascript do bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
 
     <!-- styles -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
+
+    <!-- datePicker -->
+    <link rel="stylesheet" type="text/css" media="screen" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css">
 </head>
 
 <body>
@@ -83,7 +62,7 @@
                 <form class="form" name="editarFormulario" onsubmit="serializar()" action="listagem.html" method="GET">
                     <div class="form-group">
                         <label class="">Nome</label>
-                        <input class="form-control"  name="nomeDoItem" type="text" pattern="[A-Za-z\s.áéíóúÁÉÍÓÚ]{1,50}" placeholder="Caneta" required>
+                        <input class="form-control" name="nomeDoItem" type="text" pattern="[A-Za-z\s.áéíóúÁÉÍÓÚ]{1,50}" placeholder="Caneta" required>
                     </div>
 
                     <div class="form-group">
@@ -106,7 +85,8 @@
 
                     <div class="form-group">
                         <label class="">Preço</label>
-                        <input class="form-control"  name="preco" type="text" data-thousands="." data-decimal="," data-prefix="R$" onkeydown="mascarar()" required>
+                        <input class="form-control" name="preco" type="text" data-thousands="." data-decimal="," data-prefix="R$" onkeydown="mascarar()"
+                            required>
                     </div>
 
                     <div class="form-group">
@@ -115,16 +95,22 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="">Validade</label>
-                        <input class="form-control" name="validade" type="date" onchange="limitarDataFabricacao();if(dataInferior()) produtoVencido()">
+                        <label>Validade</label>
+                        <div class='col-md-12' style="padding:0px">
+                            <input class="form-control" name="validade" type="text" onblur="limitarDataFabricacao();if(dataInferior()) produtoVencido()">
+                        </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="">Fabricação</label>
-                        <input class="form-control" name="fabricacao" type="date" required>
+                        <label>Fabricação</label>
+                        <div class='col-md-12' style="padding:0px">
+                            <input type='text' class="form-control"  name="fabricacao">
+                        </div>
                     </div>
 
+                    <br>
                     <hr>
+
                     <div>
                         <input class="btn btn-success" type="submit" value="Salvar">
                         <a href="listagem.html" class="btn btn-danger pull-right">Cancelar</a>
@@ -133,6 +119,36 @@
             </div>
         </div>
     </div>
+
+    <!-- jQuery -->
+    <script src="js/jquery.min.js"></script>
+    <!-- Última compilação e minificada do javascript do bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- checar o browser e adicionar o arquivo certo -->
+    <script>
+        var head = document.getElementsByTagName('head')[0];
+        var editarConfig = document.createElement("script");
+        var validacaoCampoMonetario = document.createElement("script");
+
+        if (navigator.userAgent.match('MSIE')) {
+            editarConfig.src = "js/IE/editarConfig.js";
+            validacaoCampoMonetario.src = "js/IE/validacaoCampoMonetario.js";
+
+        } else {
+            editarConfig.src = "js/editarConfig.js";
+            validacaoCampoMonetario.src = "js/validacaoCampoMonetario.js";
+        }
+
+        window.onload = function () {
+            head.appendChild(editarConfig);
+            head.appendChild(validacaoCampoMonetario);
+        }
+    </script>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/src/js/bootstrap-datetimepicker.js"></script>
 </body>
 
 </html>
