IE Editar e Listar

--- a/editar.html
+++ b/editar.html
@@ -107,6 +107,7 @@
                             <input type='text' class="form-control"  name="fabricacao">
                         </div>
                     </div>
+    
 
                     <br>
                     <hr>
@@ -131,7 +132,7 @@
         var editarConfig = document.createElement("script");
         var validacaoCampoMonetario = document.createElement("script");
 
-        if (navigator.userAgent.match('MSIE')) {
+        if (navigator.userAgent.match('Trident')) {
             editarConfig.src = "js/IE/editarConfig.js";
             validacaoCampoMonetario.src = "js/IE/validacaoCampoMonetario.js";
 
