--- a/cadastro.html
+++ b/cadastro.html
@@ -95,7 +95,7 @@
 
                     <div class="form-group">
                         <label>Perecível</label>
-                        <input name="perecivel" type="checkbox" onchange="validadeObrigatoria(this.checked)">
+                        <input class="form-check-input" name="perecivel" type="checkbox" onchange="validadeObrigatoria(this.checked)">
                     </div>
 
                     <div class="form-group">
@@ -134,7 +134,7 @@
         var cadastroConfig = document.createElement("script");
         var validacaoCampoMonetario = document.createElement("script");
     
-        if (navigator.userAgent.match('MSIE')) {
+        if (navigator.userAgent.match('Trident')) {
             cadastroConfig.src ="js/IE/cadastroConfig.js";
             validacaoCampoMonetario.src = "js/IE/validacaoCampoMonetario.js";
         } else {
